Working with the Image Attribute

--- a/Image.html
+++ b/Image.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HTML Page</title>
+	<title>Image Page</title>
 </head>
 <body>
 	<h1>This is a large heading.</h1>
@@ -18,7 +18,7 @@
 
 	<li>Dog</li>
 
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Golden_retriever_eating_pigs_foot.jpg/170px-Golden_retriever_eating_pigs_foot.jpg">
+	<img src="Dog.jpg" alt="Dog" width="300">
 
 
 	<li>Monkeys</li>
