Working with the Image Page

--- a/Image.html
+++ b/Image.html
@@ -13,7 +13,7 @@
 <ol>
 	<li>Cat</li>
 
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Tabby_cat_with_visible_nictitating_membrane.jpg/220px-Tabby_cat_with_visible_nictitating_membrane.jpg">
+	<img src="Cat.jpg" alt="Cat" width="300">
 
 
 	<li>Dog</li>
@@ -23,12 +23,7 @@
 
 	<li>Monkeys</li>
 
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Portrait_of_a_father.jpg/220px-Portrait_of_a_father.jpg">
-
-	<li>Tim Berners~Lee</li>
-
-	<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Sir_Tim_Berners-Lee_%28cropped%29.jpg/220px-Sir_Tim_Berners-Lee_%28cropped%29.jpg">
-
+	<img src="Monkey.jpg" alt="Monkey" width="300"
 </ol>
 
 
