Working with the Image Page

--- a/Image.html
+++ b/Image.html
@@ -13,20 +13,18 @@
 <ol>
 	<li>Cat</li>
 
-	<img src="Cat.jpg" alt="Cat" width="300">
+	<img src="cat.jpg" alt="Cat" width="300">
 
 
 	<li>Dog</li>
 
-	<img src="Dog.jpg" alt="Dog" width="300">
+	<img src="dog.jpg" alt="Dog" width="300">
 
 
 	<li>Monkeys</li>
 
-	<img src="Monkey.jpg" alt="Monkey" width="300"
+	<img src="monkey.jpg" alt="Monkey" width="300"
 </ol>
-
-
 
 </body>
 </html>
